@@ -1,6 +1,8 @@
 
 Drupal 7.22, xxxx-xx-xx (development version)
 -----------------------
+- Added an empty "datatype" attribute to taxonomy term and username links to
+  make the RDFa markup upward compatible with RDFa 1.1 (minor markup addition).
 - Fixed a bug which caused the denial-of-service protection added in Drupal
   7.20 to break certain valid image URLs that had an extra slash in them.
 - Fixed a bug with update queries in the SQLite database driver that prevented
